force-app/main/default/objects/Customs_Document__c/Customs_Document__c.object-meta.xml
<CustomObject>
    <description>Junction object tracking customs clearance status for cargo in shipments</description>
    <label>Customs Document</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Customs Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customs Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>