force-app/main/default/objects/Customs_Document__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date when document was approved or rejected</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>