force-app/main/default/objects/Customs_Document__c/fields/Customs_Officer__c.field-meta.xml
<CustomField>
    <fullName>Customs_Officer__c</fullName>
    <description>Name of the external customs officer handling the document</description>
    <label>Customs Officer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>