force-app/main/default/objects/Customs_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Type of customs document</description>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import License</fullName>
                <default>true</default>
                <label>Import License</label>
            </value>
            <value>
                <fullName>Export Declaration</fullName>
            </value>
            <value>
                <fullName>Hazmat Certificate</fullName>
            </value>
            <value>
                <fullName>Inspection Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>