force-app/main/default/objects/Customs_Document__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date when document was submitted to customs</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>